web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-nested-let-var/output.txt
[SyntaxError]: Identifier has already been declared. (3,9)
3|  { var a; }
 |       ^
